NXP-21508 fix automation chain parameters in context